@@ -1,0 +1,1 @@
+export NIPYPE_NO_ET=1
