@@ -1,3 +1,6 @@
+  27 Jul 2020;  <chymera@gentoo.org> +files/98nipype, nipype-1.5.0.ebuild:
+  sci-libs/nipype: disabled etelemetry functionality
+
 *nipype-1.5.0 (17 Jul 2020)
 
   17 Jul 2020;  <chymera@gentoo.org> +nipype-1.5.0.ebuild:
